@@ -1,3 +1,4 @@
+230815 add random init points for football
 230801 deterministic action sampling
 230719 graph action check
 230719 remove requirements.txt 
